--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.11MB/s(Youtube:不良林), server: 213.183.59.190, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-307.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-507.4KB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 保加利亚-221.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇺🇸 美国-779.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 保加利亚-228.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林), server: 213.183.53.200, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-576.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇳🇱 荷兰-509.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇭🇰 香港-2.08MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.64MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-513.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林)
-      - 保加利亚-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
-      - 保加利亚-228.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-513.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林)
-      - 保加利亚-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
-      - 保加利亚-228.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-513.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林)
-      - 保加利亚-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
-      - 保加利亚-228.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-513.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林)
-      - 保加利亚-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
-      - 保加利亚-228.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-513.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林)
-      - 保加利亚-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
-      - 保加利亚-228.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-513.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林)
-      - 保加利亚-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
-      - 保加利亚-228.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-513.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-507.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-773.7KB/s(Youtube:不良林)
-      - 保加利亚-221.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-779.7KB/s(Youtube:不良林)
-      - 保加利亚-228.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-892.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-513.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
