--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: us.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: us.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇺🇸 美国-576.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇳🇱 荷兰-860.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇳🇱 荷兰-240.3KB/s(Youtube:不良林), server: 213.183.51.172, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-238.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-884.1KB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
   - {name: 🇳🇱 荷兰-248.7KB/s(Youtube:不良林), server: 213.183.59.190, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林), server: 213.183.53.182, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇳🇱 荷兰-490.9KB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇨🇳 中国-3.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林), server: 213.183.53.200, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇳🇱 荷兰-629.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇳🇱 荷兰-251.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇳🇱 荷兰-593.1KB/s(Youtube:不良林), server: 213.183.59.211, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇺🇸 美国-923.6KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss2.2046.gq, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-860.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-884.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-248.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-629.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-593.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-860.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-884.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-248.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-629.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-593.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-860.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-884.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-248.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-629.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-593.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-860.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-884.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-248.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-629.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-593.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-860.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-884.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-248.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-629.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-593.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-860.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-884.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-248.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-629.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-593.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-188.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-860.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-238.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-884.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-462.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-248.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-336.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-490.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-422.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-629.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-251.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-593.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
